--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <div class="MeLogo Logo">
               <img
                 width="24"
-                src="
-                https://media.licdn.com/dms/image/D4D03AQEuy9faAt-EOg/profile-displayphoto-shrink_100_100/0/1686797040492?e=1717027200&amp;v=beta&amp;t=tBxe2QZ8H0eG_RXQ6op_BI9ayxr2hD03we-YXOlkdwg
+                src="SVGS/profileImage.jpeg"
                 "
                 height="24"
                 alt="Ajay Rajput"
@@ -181,9 +180,8 @@
               <div class="leftUpLogo">
                 <img
                   width="64"
-                  src="
-                  https://media.licdn.com/dms/image/D4D03AQEuy9faAt-EOg/profile-displayphoto-shrink_100_100/0/1686797040492?e=1717027200&amp;v=beta&amp;t=tBxe2QZ8H0eG_RXQ6op_BI9ayxr2hD03we-YXOlkdwg"
-                  loading="lazy"
+                  src="SVGS/profileImage.jpeg"
+                  "                 loading="lazy"
                   height="64"
                   alt="Photo of Ajay Rajput"
                   class="leftUpLogo1"
@@ -274,9 +272,8 @@
               <div class="logo">
                 <img
                   class="logo"
-                  src="
-                  https://media.licdn.com/dms/image/D4D03AQEuy9faAt-EOg/profile-displayphoto-shrink_100_100/0/1686797040492?e=1717027200&amp;v=beta&amp;t=tBxe2QZ8H0eG_RXQ6op_BI9ayxr2hD03we-YXOlkdwg"
-                  alt="Visit profile for Ajay Rajput"
+                  src="SVGS/profileImage.jpeg"
+                  "                 alt="Visit profile for Ajay Rajput"
                 />
               </div>
               <button class="postBarUPWriting">
@@ -367,9 +364,7 @@
                 <div class="other-user-info-photo">
                   <img
                     class="other-user-info-photo"
-                    src="
-                    https://media.licdn.com/dms/image/D4D03AQHBcDl5nyYfag/profile-displayphoto-shrink_100_100/0/1682955653485?e=1717027200&amp;v=beta&amp;t=6qTZwZ81SXpz6wBa4H7rbKBS_80HPJkIIVafxYMVA3I"
-                    loading="lazy"
+                    src="SVGS/post1profileImage.jpeg  "                    loading="lazy"
                     alt="Harshit Trehan"
                   />
                 </div>
@@ -432,9 +427,7 @@
             <div class="other-user-photo">
               <img
                 class="other-user-photo"
-                src="
-                https://media.licdn.com/dms/image/D4E12AQFuK7xvl2npDg/article-cover_image-shrink_720_1280/0/1699008679944?e=1717027200&amp;v=beta&amp;t=dJK2_yAaLYNrsJBPVe0Yn80hgneOjhVHLF5r9K5SAIQ"
-                loading="lazy"
+                src="SVGS/Image1.jpeg"              loading="lazy"
               />
             </div>
             <div class="other-user-LCRS">
@@ -610,9 +603,7 @@
               "Why is it that every time I ask for a pair of hands, they come with a brain attached?" 🤔            </div>
             <div class="other-user-photo">
               <img
-              class="other-user-photo" width="" src="
-              https://media.licdn.com/dms/image/D4E22AQEsfDXBssz8XA/feedshare-shrink_800/0/1711618318294?e=1714608000&amp;v=beta&amp;t=5f-13d5X8CnbYHnpSqRweZUlci0hEe5rw6jv8Qb8oD0" loading="lazy"  alt="A satirical illustration of a hierarchical corporate structure represented as a grinder machine. The worker on the left seems to be contented with his work and he has a new idea, but as he goes through the grinder with the &quot;Hierarchy&quot; sign above it, he becomes exhausted and loses his idea." id="ember2693" class="ivm-view-attr__img--centered ivm-view-attr__img--aspect-fit update-components-image__image update-components-image__image--constrained evi-image lazy-image ember-view">
-            </div>
+              class="other-user-photo" width="" src="SVGS/Image2.jpeg" />           </div>
             <div class="other-user-LCRS">
               <div class="emojiLCS">
                 <div class="like-repost-Images">
@@ -791,8 +782,7 @@
               Your experiences arm you for greater heights.
             </div>
             <div class="other-user-photo">
-              <img class="other-user-photo" width="" src="
-              https://media.licdn.com/dms/image/D5622AQFEUOI-woQ5UQ/feedshare-shrink_1280/0/1714514234047?e=1717632000&v=beta&t=ZWwOxbKhrk829f_rtZcK05rj7ZBy7-5yrzk2Evw8gEQ"            </div>
+              <img class="other-user-photo" width="" src="SVGS/Image3.jpeg"/>
            <div class="other-user-LCRS">
               <div class="emojiLCS">
                 <div class="like-repost-Images">
@@ -964,8 +954,9 @@
             </div>
           </div>
           <div class="right-downside-portion">
-            <div class="right-downside-portion-image"  ><img  class="right-downside-portion-image" src="
-              https://media.licdn.com/media/AAYQAgTPAAgAAQAAAAAAADVuOvKzTF-3RD6j-qFPqhubBQ.png" alt="Advertise on LinkedIn" border="0"></div>
+            <div class="right-downside-portion-image"  ><img  class="right-downside-portion-image" src="SVGS/SeeWho'sHiring.png"
+              " 
+              alt="Advertise on LinkedIn" border="0"></div>
             <div class="right-downside-portion-others">
               <div class="About rdpo">About</div>
               <div class="Accessibility rdpo">Accessibility</div>
@@ -1034,8 +1025,8 @@
       <div class="contact-Messaging">
         <div class="Messaging-header">
           <div class="Messaging-header-left">
-            <span class="Messaging-header-left-userLogo"><img  class="Messaging-header-left-userLogo" width="" height="" src="
-              https://media.licdn.com/dms/image/D4D03AQEuy9faAt-EOg/profile-displayphoto-shrink_100_100/0/1686797040492?e=1717632000&amp;v=beta&amp;t=ZioEEta6o9rTZMSTxQ15LvgMc_IVHZl-XKK-T8ysitU" loading="lazy" alt="Ajay Rajput" id="ember177" class="presence-entity__image EntityPhoto-circle-1  evi-image lazy-image ember-view"></span>
+            <span class="Messaging-header-left-userLogo"><img  class="Messaging-header-left-userLogo" width="" height="" src="SVGS/profileImage.jpeg"
+              " loading="lazy" alt="Ajay Rajput"></span>
             <span class="Messaging-header-left-text">Messaging</span>
           </div>
           <div class="Messaging-header-right">
